# SimGarden

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  INSTRUCOES.md  README.md  Relatorio_Meta2.tex  main.cpp
config/: RandomGenerator.h  Settings.h
core/: Interface.cpp  Interface.h  Simulator.cpp  Simulator.h  Validator.cpp  Validator.h
ferramentas/: Ferramenta.cpp  Ferramenta.h  FerramentaZ.cpp  FerramentaZ.h  PacoteAdubo.cpp  PacoteAdubo.h  Regador.cpp  Regador.h  TesouraPoda.cpp  TesouraPoda.h
include/: Garden.h  Plant.h
jardim/: Jardim.cpp  Jardim.h  Posicao.cpp  Posicao.h
jardineiro/: Jardineiro.cpp  Jardineiro.h
plantas/: Cacto.cpp  Cacto.h  ErvaDaninha.cpp  ErvaDaninha.h  Planta.cpp  Planta.h  PlantaExotica.cpp  PlantaExotica.h  Roseira.cpp  Roseira.h
src/: Garden.cpp  Plant.cpp  main.cpp
